<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/saloonbackground3"
    tools:context=".MySalonProfActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                app:fontFamily="casual"
                android:text="@string/memysalonprofM"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/tv31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv30"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                app:fontFamily="casual"
                android:text="@string/uploadimage"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="15dp" />

            <ImageView
                android:id="@+id/selectpro"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_below="@+id/tv31"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginRight="60dp"
                android:cropToPadding="false"
                android:paddingLeft="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/upload"

                />

            <TextView
                android:id="@+id/te"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/selectpro"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                app:fontFamily="casual"
                android:text="@string/plzselectcityM"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"

                android:textSize="14sp" />

            <Spinner
                android:id="@+id/subcatspiner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/te"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"

                app:fontFamily="casual"

                />

            <EditText
                android:id="@+id/salonphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subcatspiner"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="45dp"
                android:background="@drawable/reg_edittext_style"
                app:fontFamily="casual"
                android:hint="@string/salonphoneM"
                android:inputType="number"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"

                />

            <EditText
                android:id="@+id/proprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/salonphone"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="45dp"
                android:background="@drawable/reg_edittext_style"
                android:fontFamily="casual"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"

                />

            <EditText
                android:id="@+id/prodesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/proprice"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="45dp"
                android:background="@drawable/reg_edittext_style"
                android:hint="@string/salonaddressM"
                android:inputType="textMultiLine"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                app:fontFamily="casual"
                />
            <EditText
                android:id="@+id/mdesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/prodesc"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="45dp"
                android:background="@drawable/reg_edittext_style"
                android:hint="@string/desc"
                android:inputType="textMultiLine"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                app:fontFamily="casual"
                />
            <EditText
                android:id="@+id/mprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mdesc"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="45dp"
                android:background="@drawable/reg_edittext_style"
                android:hint="@string/price"
                android:inputType="textMultiLine"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                app:fontFamily="casual"
                />



            <Button
                android:id="@+id/addpro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mprice"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="90dp"
                android:background="@drawable/reg_edittext_style"
                app:fontFamily="casual"
                android:padding="10dp"
                android:text="@string/create"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp"
                android:textStyle="italic"
                android:layout_marginBottom="15dp"

                />
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>